# homelab-trendly

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Caddyfile  Dockerfile  PLAN.md  README.md  REMOTE.md  config.json5  docker-compose.yml  llms.txt  optimizer.py  package-lock.json  package.json  pyproject.toml  queue-remote.json  runner.py  start-api.ps1  start-preview.ps1  start-worker.ps1  tool_server.py  tsconfig.json
.learnings/: LEARNINGS.md
affiliate/: config.yaml
affiliate-pipeline/: formats_v1.json
api/: config.py  database.py  main.py  requirements.txt
archive/: .gitignore
archived/: .gitignore  vitest.config.ts
config/: article-types.json  categories.json
docs/: IMPLEMENTATION-STATUS.md  SCHEDULING.md  dedup-scaling-plan.md  pricerunner-api.md
legacy/: README.md  mcp.json
migrations/: 001_initial.sql  002_coverage.sql
openclaw-plugin-testflow/: package.json
openspec/: config.yaml
prompts/: article-boremaskiner-live.json  article-robotstovsugere-hero-rendered.html  article-robotstovsugere-hero.json  article-robotstovsugere-regen-rendered.html  article-robotstovsugere-sample-rendered.html  article-robotstovsugere-spr-rendered.html  article-robotstovsugere-spr.bak.json  article-robotstovsugere-spr.json  brief-laptops-sample.json  generate-article-task.md  generate_base.txt  generate_v1.txt  optimize_v1.txt  qa_v1.txt  score_v1.txt
scripts/: _fix_hero_headings.py  _gen_remote_queue.py  backfill_coverage.py  backfill_scores.py  build-live-brief.ts  build-plugin.sh  check-brief.mjs  clean_jsonl.py  consume_queue.py  dump_step.py  (+30 more)
(+305 files in other folders)
