[tool.poetry]
name = "testflow"
version = "0.1.0"
description = "Autonomous Danish affiliate marketing article generator"
authors = []
packages = [{ include = "testflow", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27"
pydantic = "^2.7"
fastapi = "^0.111"
uvicorn = "^0.30"
beautifulsoup4 = "^4.12"
python-dotenv = "^1.0"
pyyaml = "^6.0"
tenacity = "^8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-httpx = "^0.30"
ruff = "^0.4"
mypy = "^1.10"
taskipy = "^1.12"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.taskipy.tasks]
start          = "uvicorn tool_server:app --host localhost --port 8000 --reload"
test           = "pytest"
lint           = "ruff check src/ tests/"
fmt            = "ruff format src/ tests/"
typecheck      = "mypy src/"
check          = "ruff check src/ tests/ && mypy src/"
build-plugin   = "bash scripts/build-plugin.sh"
install-plugin = "bash scripts/build-plugin.sh"
